# wasm-tracing-macro

./: .gitignore  Cargo.toml  Justfile  README.md  workload.yaml
component/: Cargo.toml  wasmcloud.toml
component/.wash/: config.yaml
component/src/: lib.rs
component/wit/: world.wit
data/: Cargo.toml
data/src/: main.rs
http-api/: Cargo.toml  wasmcloud.toml  wkg.toml
http-api/.wash/: config.yaml
http-api/src/: lib.rs
http-api/wit/: world.wit
otel-tracing-wasm-macro/: Cargo.toml
otel-tracing-wasm-macro/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: lib.rs
