[package]
name = "otel-wasm-component"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.42.0"
wash-service-helpers = { git = "https://github.com/Gopi200/wasm-caching-poc/" }
serde = "1.0.228"
serde_json = "1.0.149"
wstd = "0.6.6"
shared = { path = "../shared/" }
